@@ -1,4 +1,4 @@
-/* Generated by re2c 0.5 on Tue Mar 15 18:37:40 2005 */
+/* Generated by re2c 0.5 on Wed Mar 23 18:21:31 2005 */
 #line 1 "c:\\Cvs\\wave\\libs\\wave\\src\\cpplexer\\re2clex\\cpp.re"
 /*=============================================================================
     Wave: A Standard compliant C++ preprocessor library
